objects/Pebble_Pack__c.object
<CustomObject>
    <fields>
        <fullName>AppTitle__c</fullName>
        <description>Used to optimize the SOQL call from the Pebble watch.</description>
        <formula>Pebble_App__r.AppTitle__c</formula>
        <inlineHelpText>The Title line of the PebbleForce application as it will show on the Pebble in smaller text.</inlineHelpText>
        <label>App Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <description>The flag indicate the state or type of Pack assignment.</description>
        <inlineHelpText>The flag indicate the state or type of Pack assignment.\
All - will be displayed for ALL users
User - is assigned to a single user
Draft - will not show up for any users</inlineHelpText>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a link to the user who is assigned to the App.</description>
        <inlineHelpText>This is a link to the user who is assigned to the App.</inlineHelpText>
        <label>Pack User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pebble_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pebble_App__c</fullName>
        <label>Pebble App</label>
        <referenceTo>Pebble_App__c</referenceTo>
        <relationshipLabel>Pebble Packs</relationshipLabel>
        <relationshipName>Pebble_Packs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Used to order the Pebble Applications on the menu.</description>
        <inlineHelpText>Used to order the Pebble Applications on the menu.</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to optimize the SOQL query from the Pebble Watch</description>
        <formula>TEXT(Pebble_App__r.Active__c)</formula>
        <inlineHelpText>Indicates if this PebbleForce App is Active or in some other state.  Only &apos;Active&apos; Apps will be displayed on the Pebble watch.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTitle__c</fullName>
        <description>The SubTitle or description from the Pebble_App__c Object.  Shown here to optimize the SOQL calls from the Pebble watch.</description>
        <formula>Pebble_App__r.AppSubTitle__c</formula>
        <inlineHelpText>The SubTitle line or additional description of the PebbleForce application as it will show on the Pebble in smaller text.</inlineHelpText>
        <label>Sub Title</label>
        <type>Text</type>
    </fields>
    <label>Pebble Pack</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AppTitle__c</columns>
        <columns>Pack_User__c</columns>
        <columns>Pebble_App__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pebble Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pebble Packs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>